Fix(AnalyticalTable): update column header icons to align with latest spec

--- a/packages/main/src/components/AnalyticalTable/ColumnHeader/ColumnHeader.module.css
+++ b/packages/main/src/components/AnalyticalTable/ColumnHeader/ColumnHeader.module.css
@@ -62,3 +62,8 @@
   display: flex;
   justify-content: center;
 }
+
+.icon {
+  height: 0.8rem;
+  width: 0.8rem;
+}
